Change metadata within code

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>Robot Parts Co. · Every part to conquer the world · RoboCountry221</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="A mega conglomerate corporation selling and servicing all totalitarian robots.">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 
   <header>
-    <h1><img src="images/logo.svg" alt=""></h1>
+    <h1><img src="images/logo.svg" alt="Robot Parts Co."></h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
