--- a/robot-parts.html
+++ b/robot-parts.html
@@ -5,11 +5,12 @@
   <title>Robot Parts · Robot Parts Co.</title>
   <meta name="description" content="Every part or piece a destructive robot needs: gears, rotors, manipulators, sensors, power cells and more.">
   <link href="css/main.css" rel="stylesheet">
+
 </head>
 <body>
 
   <header>
-    <h1><img src="images/logo.svg" alt=""></h1>
+    <strong><img src="images/robot-parts-co.svg" alt="Robot Parts Co."></strong>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -20,7 +21,7 @@
   </header>
 
   <main>
-    <h2>Products</h2>
+    <h1>Robot Parts</h1>
 
     <ul>
       <li>Gears</li>
