--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,18 @@
   <title>Contact · Robot Parts Co.</title>
   <meta name="description" content="Send us digital beams or stop by the warehouse to order a part that we're missing.">
   <link href="css/main.css" rel="stylesheet">
+  <meta name="ICBM" content="45.41117,-75.69812">
+  <meta name="geo.position" content="45.41117,-75.69812">
+  <meta name="geo.region" content="ca-on">
+  <meta name="geo.placename" content="Ottawa">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Robot Parts Co. · Every part to conquer the world">
+  <meta property="og:url" content="https://robotparts.co/">
+  <meta property="og:image" content="https://robotparts.co/image/social.jpg">
+  <meta property="og:description" content="A mega conglomerate corporation selling and servicing all totalitarian robots.">
+  <meta property="og:locale" content="en_CA">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@robotpartsco">
 </head>
 <body>
 
