--- a/robot-parts.html
+++ b/robot-parts.html
@@ -13,6 +13,7 @@
   <meta property="og:title" content="Robot Parts Co. · Every part to conquer the world">
   <meta property="og:url" content="https://robotparts.co/">
   <meta property="og:image" content="https://robotparts.co/image/social.jpg">
+  <meta property="og-site_name" content="Robot Parts Co.">
   <meta property="og:description" content="A mega conglomerate corporation selling and servicing all totalitarian robots.">
   <meta property="og:locale" content="en_CA">
   <meta name="twitter:card" content="summary">
