--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Contact · Robot Parts Co.</title>
   <meta name="description" content="Send us digital beams or stop by the warehouse to order a part that we're missing.">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <meta name="ICBM" content="45.41117,-75.69812">
   <meta name="geo.position" content="45.41117,-75.69812">
