--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Robot Parts Co. · Every part to conquer the world · RoboCountry221</title>
   <meta name="description" content="A mega conglomerate corporation selling and servicing all totalitarian robots.">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <meta name="ICBM" content="45.41117,-75.69812">
   <meta name="geo.position" content="45.41117,-75.69812">
