--- a/robot-parts.html
+++ b/robot-parts.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Robot Parts · Robot Parts Co.</title>
   <meta name="description" content="Every part or piece a destructive robot needs: gears, rotors, manipulators, sensors, power cells and more.">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <meta name="ICBM" content="45.41117,-75.69812">
   <meta name="geo.position" content="45.41117,-75.69812">
