--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
   <meta property="og:title" content="Robot Parts Co. · Every part to conquer the world">
   <meta property="og:url" content="https://robotparts.co/">
   <meta property="og:image" content="https://robotparts.co/image/social.jpg">
-  <meta property="og-site_name" content="Robot Parts Co.">
+  <meta property="og:site_name" content="Robot Parts Co.">
   <meta property="og:description" content="A mega conglomerate corporation selling and servicing all totalitarian robots.">
   <meta property="og:locale" content="en_CA">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@robotpartsco">
+  <meta name="twitter:title" content="summary">
+  <meta name="twitter:url" content="summary">
+  <meta name="twitter:description" content="summary">
+    <meta name="twitter:image" content="summary">
 </head>
 <body>
 
