--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <meta property="og:locale" content="en_CA">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@robotpartsco">
+</head>
+
 <body>
 
   <header>
